FileUpload making. next, insert db file information.